--- a/src/css/homestyle.css
+++ b/src/css/homestyle.css
@@ -1,5 +1,23 @@
-.link{
-    color: rgb(6, 121, 228);
+.link {
+    color: #58A2FF;
     text-transform: uppercase;
     text-decoration: none;
+}
+
+.grid {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.card {
+    margin: 20px;
+    box-shadow: rgba(0, 0, 0, 0.4) 10px 20px 30px, rgba(0, 0, 0, 0.3) 10px 1px 53px 3px, rgba(1, 0, 0, 0.2) 0px -1px 3px;
+
+}
+
+.card:hover {
+    transform: scale(1.021);
+
 }
